--- a/Login/css/main.css
+++ b/Login/css/main.css
@@ -176,10 +176,10 @@ iframe {
   align-items: center;
   padding: 15px;
   background: #9053c7;
-  background: -webkit-linear-gradient(-135deg, #c850c0, #4158d0);
-  background: -o-linear-gradient(-135deg, #c850c0, #4158d0);
-  background: -moz-linear-gradient(-135deg, #c850c0, #4158d0);
-  background: linear-gradient(-135deg, #c850c0, #4158d0);
+  background: -webkit-linear-gradient(-135deg, #a5a2a5, #1d8bd4);
+  background: -o-linear-gradient(-135deg, #a5a2a5, #1d8bd4);
+  background: -moz-linear-gradient(-135deg, #a5a2a5, #1d8bd4);
+  background: linear-gradient(-135deg, #a5a2a5, #1d8bd4);
 }
 
 .wrap-login100 {
@@ -531,8 +531,8 @@ div#div-CHexibi {
 }
 .main-container {
   background: #9053c7;
-  background: -webkit-linear-gradient(-135deg, #c850c0, #4158d0);
-  background: -o-linear-gradient(-135deg, #c850c0, #4158d0);
-  background: -moz-linear-gradient(-135deg, #c850c0, #4158d0);
-  background: linear-gradient(-135deg, #c850c0, #4158d0);
+  background: -webkit-linear-gradient(-135deg, #a5a2a5, #1d8bd4);
+  background: -o-linear-gradient(-135deg, #a5a2a5, #1d8bd4);
+  background: -moz-linear-gradient(-135deg, #a5a2a5, #1d8bd4);
+  background: linear-gradient(-135deg, #a5a2a5, #1d8bd4);
 }
